replace images to shiba inus

--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@
 </head>
 
 <body>
+    <h1>Dogecoin</h1>
     <div class="container">
-        <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1583334506575-bd01c6b92e57?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2850&q=80')">
-            <h3>Grumpy Doge</h3>
+        <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1618173745201-8e3bf8978acc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=701&q=80')">
+            <h3>Vacay Doge</h3>
         </div>
 
-        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1561962533-931a9bfe18b2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80')">
-            <h3>Hungry Doge</h3>
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1453365607868-7deed8cc7d26?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80')">
+            <h3>Derpy Doge</h3>
         </div>
 
-        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1554173341-e3cfe8b0cbbf?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80')">
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1610556009296-a3125836f118?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80')">
             <h3>Playful Doge</h3>
         </div>
-        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1596181894764-c09a97c2e1aa?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1525&q=80')">
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1567225591450-06036b3392a6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80')">
             <h3>Sleepy Doge</h3>
         </div>
-        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1537204696486-967f1b7198c8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80')">
-            <h3>Happy Doge</h3>
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1512568555509-049820d30edb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1052&q=80')">
+            <h3>Grumpy Doge</h3>
         </div>
-        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1453227588063-bb302b62f50b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80')">
-            <h3>Somber Doge</h3>
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1595660196771-b205415fb5b1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80')">
+            <h3>Happy Doge</h3>
         </div>
 
 
